yamls/v3/0-heroes-v3.yaml
# Heroes v2 deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heroes-v3
  labels:
    app: heroes
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heroes
      version: v3
  template:
    metadata:
      labels:
        app: heroes
        version: v3
    spec:
      containers:
        - name: heroes
          image: hero-service:v3.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: heroes
spec:
  host: heroes
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: heroes-vtl-svc
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /hero-service/
      rewrite:
        uri: /
      route:
        - destination:
            host: heroes
            subset: v3
            port:
              number: 3000
